Revert pootle update for AccessFu

--- a/sv-SE/dom/chrome/accessibility/AccessFu.properties
+++ b/sv-SE/dom/chrome/accessibility/AccessFu.properties
@@ -13,23 +13,23 @@ grip           =       grepp
 alert          =       avisering
 menupopup      =       meny
 document       =       dokument
-pane           =       panel
-dialog         =       dialogruta
-separator      =       avskiljare
+pane           =       fönster
+dialog         =       dialog
+separator      =       avgränsare
 toolbar        =       verktygsfält
 statusbar      =       statusfält
 table          =       tabell
-columnheader   =       kolumnhuvud
-rowheader      =       radhuvud
+columnheader   =       kolumnrubrik
+rowheader      =       radrubrik
 column         =       kolumn
 row            =       rad
 cell           =       cell
 link           =       länk
 list           =       lista
 listitem       =       listobjekt
-outline        =       kontur
-outlineitem    =       kontur objekt
-pagetab        =       flik
+outline        =       disposition
+outlineitem    =       dispositionsobjekt
+pagetab        =       sidflik
 propertypage   =       egenskapssida
 graphic        =       grafik
 pushbutton     =       knapp
@@ -43,28 +43,28 @@ diagram        =       diagram
 animation      =       animation
 equation       =       ekvation
 buttonmenu     =       knappmeny
-whitespace     =       mellanrum
-pagetablist    =       fliklista
-canvas         =       canvas
-checkmenuitem  =       menypost med kryssruta
+whitespace     =       tomt utrymme
+pagetablist    =       sidflikslista
+canvas         =       arbetsyta
+checkmenuitem  =       kryssruta som menyobjekt
 label          =       etikett
 passwordtext   =       lösenordstext
-radiomenuitem  =       alternativmenypost
-textcontainer  =       textutrymme
+radiomenuitem  =       alternativknapp som menyobjekt
+textcontainer  =       textbehållare
 togglebutton   =       växlingsknapp
-treetable      =       träd tabell
+treetable      =       trädtabell
 header         =       sidhuvud
 footer         =       sidfot
 paragraph      =       paragraf
 entry          =       post
-caption        =       rubrik
-heading        =       överskrift
+caption        =       bildtext
+heading        =       rubrik
 section        =       sektion
 form           =       formulär
-comboboxlist   =       kombinationsrut lista
-comboboxoption =       kombinationsrut alternativ
-imagemap       =       bildkarta
-listboxoption  =       alternativ
+comboboxlist   =       kombinationsrutelista
+comboboxoption =       kombinationsrutealternativ
+imagemap       =       bild
+listboxoption  =       listrutealternativ
 listbox        =       listruta
 flatequation   =       enkel ekvation
 gridcell       =       rutnätscell
@@ -85,19 +85,19 @@ textInputType_tel    =       telefon
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
-headingLevel   =       huvudnivå %S
+headingLevel   =       rubriksnivå %S
 
 # more sophisticated list announcement
-listStart      =       Första post
-listEnd        =       Sista post
+listStart      =       Första objektet
+listEnd        =       Sista objektet
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       1 post;#1 poster
+listItemsCount =       1 objekt;#1 objekt
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
-objItemOfN      =       %1$S — %2$S
+objItemOfN      =       %1$S av %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -147,7 +147,7 @@ tabLoading     =      laddar
 tabLoaded      =      laddad
 tabNew         =      ny flik
 tabLoadStopped =      laddning avbruten
-tabReload      =      hämta om
+tabReload      =      ladda om
 
 # Object states
 stateChecked     =    markerad
@@ -170,18 +170,18 @@ navigationMode =      navigerar
 quicknav_Simple      = Standard
 quicknav_Anchor      = Ankare
 quicknav_Button      = Knappar
-quicknav_Combobox    = Kombinationsruta
-quicknav_Landmark    = Landmärken
+quicknav_Combobox    = Kombinationsrutor
+quicknav_Landmark    = Milstolpar
 quicknav_Entry       = Poster
-quicknav_FormElement = Formulärelement
+quicknav_FormElement = Formulärfält
 quicknav_Graphic     = Bilder
-quicknav_Heading     = Huvuden
-quicknav_ListItem    = Listposter
+quicknav_Heading     = Rubriker
+quicknav_ListItem    = Listobjekt
 quicknav_Link        = Länkar
 quicknav_List        = Listor
 quicknav_PageTab     = Sidflikar
 quicknav_RadioButton = Alternativknappar
-quicknav_Separator   = Avskiljare
+quicknav_Separator   = Avgränsare
 quicknav_Table       = Tabeller
 quicknav_Checkbox    = Kryssrutor
 
@@ -189,29 +189,29 @@ quicknav_Checkbox    = Kryssrutor
 menubarAbbr        =       menyrad
 scrollbarAbbr      =       rullningslist
 gripAbbr           =       grepp
-alertAbbr          =       alarm
+alertAbbr          =       avisering
 menupopupAbbr      =       meny
 documentAbbr       =       dokument
-paneAbbr           =       panel
-dialogAbbr         =       dialogruta
-separatorAbbr      =       avskiljare
+paneAbbr           =       fönster
+dialogAbbr         =       dialog
+separatorAbbr      =       avgränsare
 toolbarAbbr        =       verktygsfält
-statusbarAbbr      =       statusrad
-tableAbbr          =       tbl
-columnheaderAbbr   =       kolumnhuvud
-rowheaderAbbr      =       radhuvud
+statusbarAbbr      =       statusfält
+tableAbbr          =       tab.
+columnheaderAbbr   =       kolumnrubrik
+rowheaderAbbr      =       radrubrik
 columnAbbr         =       kolumn
 rowAbbr            =       rad
 cellAbbr           =       cell
 linkAbbr           =       lnk
 listAbbr           =       lista
-listitemAbbr       =       listpost
+listitemAbbr       =       listobjekt
 outlineAbbr        =       disposition
 outlineitemAbbr    =       dispositionsobjekt
-pagetabAbbr        =       flik
+pagetabAbbr        =       sidflik
 propertypageAbbr   =       egenskapssida
 graphicAbbr        =       grafik
-pushbuttonAbbr     =       btn
+pushbuttonAbbr     =       knp
 checkbuttonAbbr    =       kryssruta
 radiobuttonAbbr    =       alternativknapp
 comboboxAbbr       =       kombinationsruta
@@ -222,28 +222,28 @@ diagramAbbr        =       diagram
 animationAbbr      =       animation
 equationAbbr       =       ekvation
 buttonmenuAbbr     =       knappmeny
-whitespaceAbbr     =       mellanrum
-pagetablistAbbr    =       fliklista
-canvasAbbr         =       canvas
-checkmenuitemAbbr  =       menypost med kryssruta
+whitespaceAbbr     =       tomt utrymme
+pagetablistAbbr    =       sidflikslista
+canvasAbbr         =       arbetsyta
+checkmenuitemAbbr  =       kryssruta som menyobjekt
 labelAbbr          =       etikett
-passwordtextAbbr   =       passwdtxt
-radiomenuitemAbbr  =       radiomenypost
-textcontainerAbbr  =       textutrymme
+passwordtextAbbr   =       lösenordstxt
+radiomenuitemAbbr  =       alternativknapp som menyobjekt
+textcontainerAbbr  =       textbehållare
 togglebuttonAbbr   =       växlingsknapp
 treetableAbbr      =       trädtabell
-headerAbbr         =       huvud
-footerAbbr         =       fot
+headerAbbr         =       sidhuvud
+footerAbbr         =       sidfot
 paragraphAbbr      =       paragraf
 entryAbbr          =       post
-captionAbbr        =       rubrik
-headingAbbr        =       överskrift
+captionAbbr        =       bildtext
+headingAbbr        =       rubrik
 sectionAbbr        =       sektion
 formAbbr           =       formulär
 comboboxlistAbbr   =       kombinationsrutelista
 comboboxoptionAbbr =       kombinationsrutealternativ
-imagemapAbbr       =       imgmap
-listboxoptionAbbr  =       alternativ
+imagemapAbbr       =       bild
+listboxoptionAbbr  =       listrutealternativ
 listboxAbbr        =       listruta
 flatequationAbbr   =       enkel ekvation
 gridcellAbbr       =       rutnätscell
@@ -252,7 +252,7 @@ figureAbbr         =       fig
 definitionlistAbbr =       definitionslista
 termAbbr           =       term
 definitionAbbr     =       definition
-textareaAbbr       =       txtarea
+textareaAbbr       =       txtomr
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
