--- a/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,11 @@ quit-button.tooltiptext.linux2 = Končaj %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Končaj %1$S (%2$S)
 
+loop-call-button.label = Povabite koga ne pogovor
+loop-call-button.tooltiptext = Povabite koga ne pogovor
+
 panic-button.label = Pozabi
 panic-button.tooltiptext = Pozabi nekaj zgodovine brskanja
 
-loop-call-button.label = Povabite koga ne pogovor
-loop-call-button.tooltiptext = Povabite koga ne pogovor
+web-apps-button.label = Aplikacije
+web-apps-button.tooltiptext = Odkrij aplikacije
