--- a/sl/browser/chrome/browser/downloads/downloads.properties
+++ b/sl/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=Zavrnjeno v vašem varnostnem področju
 # Indicates that the download was blocked after scanning.
 stateDirty=Zavrnjeno: lahko vsebuje virus ali vohunsko programsko opremo
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Datoteka vsebuje virus ali zlonamerno programsko opremo.
+blockedPotentiallyUnwanted=Datoteka lahko škoduje vašemu računalniku.
+blockedUncommon=Datoteke morda ni varno odpreti.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Ste prepričani, da želite dovoliti to datoteko?
+unblockTypeMalware=Datoteka vsebuje virus ali drugo zlonamerno programsko opremo, ki bo škodovala vašemu računalniku.
+unblockTypePotentiallyUnwanted=Datoteka bo pod krinko koristnega prenosa povzročila nepričakovane spremembe vaših programov in nastavitev.
+unblockTypeUncommon=Datoteka je bila prenesena iz neobičajne in morebiti nevarne spletne strani, zato je morda ni varno odpreti.
+unblockTip=Poiščete lahko drug vir prenosa ali poskusite prenesti datoteko znova pozneje.
+unblockButtonContinue=Vseeno dovoli
+unblockButtonCancel=Ohrani me varnega
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
