--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -85,6 +85,9 @@ new_contact_button=Nov stik
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Ime
 new_contact_email_placeholder=E-pošta
+
+contacts_blocked_contacts=Zavrnjeni stiki
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,6 +177,7 @@ initiate_call_button_label2=Ste pripravljeni začeti pogovor?
 incoming_call_title2=Zahteva za pogovor
 incoming_call_accept_button=Sprejmi
 incoming_call_accept_audio_only_tooltip=Sprejmi z glasom
+incoming_call_accept_audio_video_tooltip=Sprejmi z videom
 incoming_call_cancel_button=Prekliči
 incoming_call_cancel_and_block_button=Prekliči in zavrni
 incoming_call_block_button=Zavrni
