--- a/sl/browser/chrome/browser/places/places.properties
+++ b/sl/browser/chrome/browser/places/places.properties
@@ -75,16 +75,18 @@ OrganizerQueryDownloads=Prenosi
 OrganizerQueryAllBookmarks=Vsi zaznamki
 OrganizerQueryTags=Oznake
 
-# LOCALIZATION NOTE (tagResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "tag"
-# See createResultLabel() in urlbarBindings.xml 
+
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Oznaka
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "bookmark"
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Zaznamek
+switchtabResultLabel=Zavihek
+keywordResultLabel=Ključna beseda
+searchengineResultLabel=Iskanje
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
