--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Pokaži '%S'
 badContentBlocked.blocked.message=%S zavrača vsebino na tej strani.
 badContentBlocked.notblocked.message=%S ne zavrača vsebine na tej strani.
 
-# missing plugin installer
-installPlugin.message = Ali želite namestiti vtičnik, ki je potreben za prikaz vsebine na tej strani?
-installPlugin.button.label=Namesti %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Ne sprašuj več
-installPlugin.ignoreButton.accesskey=N
-
 crashedpluginsMessage.title=Vtičnik %S se je sesul.
 crashedpluginsMessage.reloadButton.label=Ponovno naloži stran
 crashedpluginsMessage.reloadButton.accesskey=O
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = K
 
 getUserMedia.sharingMenu.label = Naprave za deljenje zavihkov
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera in mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon in aplikacija)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon in zaslon)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon in okno)
+getUserMedia.sharingMenuCameraApplication = %S (kamera in aplikacija)
+getUserMedia.sharingMenuCameraScreen = %S (kamera in zaslon)
+getUserMedia.sharingMenuCameraWindow = %S (kamera in okno)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon in aplikacija)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon in zaslon)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon in okno)
