--- a/sl/browser/chrome/browser/devtools/app-manager.properties
+++ b/sl/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=Upravitelj aplikacij bo v prihodnji izdaji odstranjen. Vaši projekti so bili preseljeni v WebIDE.
+index.launchWebIDE=Zaženi WebIDE
+index.readMoreAboutWebIDE=Preberi več
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
