--- a/sl/browser/chrome/browser/devtools/webide.properties
+++ b/sl/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Vnesite URL manifesta
 notification_showTroubleShooting_label=odpravljanje težav
 notification_showTroubleShooting_accesskey=t
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Nalaganje …
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Ni mogoče namestiti projekta. Ni polne povezave.
