--- a/sl/dom/chrome/accessibility/AccessFu.properties
+++ b/sl/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    pritisnjeno
 stateExpanded    =    razširjeno
 stateCollapsed   =    strnjeno
 stateUnavailable =    ni dostopen
+stateReadonly    =    samo za branje
 stateRequired    =    obvezno
 stateTraversed   =    obiskano
 stateHasPopup    =    ima pojavni meni
