--- a/sl/dom/chrome/layout/css.properties
+++ b/sl/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Pričakovan določevalec razširitvenega sistema, venda
 PECounterASWeight=Vsaka utež v opisniku dodatnih simbolov mora biti manjša od prejšnje uteži.
 PEClassSelEOF=ime razreda
 PEClassSelNotIdent=Pričakovan določevalec za izbirnika razreda, vendar najden '%1$S'.
+PECoordinatePair=Pričakovan par koordinat, vendar najden '%1$S'.
 PETypeSelEOF=vrsta elementa
 PETypeSelNotType=Pričakovano ime elementa ali '*', vendar najden '%1$S'.
 PEUnknownNamespacePrefix=Neznana predpona imenskega prostora '%1$S'.
@@ -106,6 +107,7 @@ PEColorLightnessEOF=svetlost
 PEColorOpacityEOF=motnost kot vrednost bare
 PEExpectedNumber=Pričakovano število, vendar najden '%1$S'.
 PEExpectedCloseParen=Pričakovan ')', vendar najden '%1$S'.
+PEClipPathEOF=<basic-shape> ali referenčna škatla
 PEDeclEndEOF=';' ali '}' za zaključek najave
 PEParseDeclarationNoColon=Pričakovan ':', vendar najden '%1$S'.
 PEParseDeclarationDeclExpected=Pričakovana najava, vendar najden '%1$S'.
