--- a/sl/dom/chrome/security/security.properties
+++ b/sl/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Zahteva iz drugega izvora zavrnjena. Politika enakega iz
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Stran uporablja neveljavno glavo Strict-Transport-Security.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Stran uporablja neveljavno glavo Public-Key-Pins.
 InsecurePasswordsPresentOnPage=Polja z geslom so prisotna na strani, ki ni varna (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
 InsecureFormActionPasswordsPresent=Polja z geslom so prisotna v obrazcu z dejanjem, ki ni varno (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
 InsecurePasswordsPresentOnIframe=Polja z geslom so prisotna iframu, ki ni varen (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
 LoadingMixedActiveContent=Nalaganje mešane (nevarne) aktivne vsebine na varni strani "%1$S"
 LoadingMixedDisplayContent=Nalaganje mešane (nevarne) prikazne vsebine na varni strani "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Iframe, ki uporablja peskovniška atributa allow-scripts in allow-same-origin, lahko umakne svoj peskovnik.
