--- a/sl/toolkit/chrome/global/autocomplete.properties
+++ b/sl/toolkit/chrome/global/autocomplete.properties
@@ -10,7 +10,7 @@ searchWithEngine = Išči z iskalnikom %S
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
-searchWithEngineForQuery = %2$S — Išči z iskalnikom %S
+searchWithEngineForQuery = %2$S — Išči z iskalnikom %1$S
 switchToTab = Preklopi na zavihek
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
