--- a/sl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sl/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL je prejel neveljavne podatke za razšir
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Zmogljivost SSL, ki je povezave SSL 2.0 ne podpirajo.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Zmogljivost SSL, ki je strežniki ne podpirajo.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Zmogljivost SSL, ki je odjemalci ne podpirajo.
+SSL_ERROR_INVALID_VERSION_RANGE=Obseg različic SSL ni veljaven.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Vrstnik SSL je izbral šifrirno programsko opremo, ki ni dovoljena za izbrano različico protokola.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL je prejel poškodovano sporočilo rokovanja Hello Verify Request.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL je prejel nepričakovano sporočilo rokovanja Hello Verify Request.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Zmogljivost SSL ni podprta v izbrani različici protokola.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL je prejel nepričakovano sporočilo rokovanja Certificate Status.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Vrstnik TLS uporablja nepodprt algoritem izvlečka.
+SSL_ERROR_DIGEST_FAILURE=Funkcija povzetka ni uspela.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Nepravilen algoritem za podpisovanje naveden v digitalno podpisanem elementu.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Naslednja razširitev za pogajanje s protokolom je bila omogočena, vendar je bil povratni klic opravljen, preden je bil potreben.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Strežnik ne podpira protokolov, ki jih napoveduje odjemalec v razširitvi ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Strežnik je zavrnil rokovanje, ker odjemalec uporablja starejšo različico TLS, kot jo podpira strežnik.
 SEC_ERROR_IO=Med varnostnim preverjanjem je prišlo do I/O napake.
 SEC_ERROR_LIBRARY_FAILURE=napaka varnostne knjižnice.
 SEC_ERROR_BAD_DATA=varnosta knjižnica: prejeti so bili neveljavni podatki
