--- a/sk/dom/chrome/security/csp.properties
+++ b/sk/dom/chrome/security/csp.properties
@@ -20,9 +20,6 @@ CSPROViolationWithURI = Nastavenia stránky zachytili načítanie zdroja z adres
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
 triedToSendReport = Pokus o odoslanie správy na neplatnú adresu: "%1$S"
-# LOCALIZATION NOTE (errorWas):
-# %1$S is the error resulting from attempting to send the report
-errorWas = Chyba bola: "%1$S"
 # LOCALIZATION NOTE (couldNotParseReportURI):
 # %1$S is the report URI that could not be parsed
 couldNotParseReportURI = Nebolo možné spracovať správu: %1$S
@@ -38,21 +35,9 @@ reportURInotHttpsOrHttp2 = Adresa pre správy (%1$S) musí používať HTTP aleb
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
 reportURInotInReportOnlyHeader = Táto stránka (%1$S) má politiku Report-Only, avšak bez adresy 'report URI'. CSP nebude blokovať jej porušenia, ani ich nebude hlásiť.
-# LOCALIZATION NOTE (pageCannotSendReportsTo):
-# %1$S is the URI of the page with the policy
-# %2$S is the report URI that could not be used
-pageCannotSendReportsTo = stránka na adrese %1$S nemôže odosielať správy na adresu %2$S
-allowOrDefaultSrcRequired = Direktíva 'allow' alebo 'default-src' je vyžadovaná, ale nebola nájdená. Použije sa "default-src 'none'"
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
 failedToParseUnrecognizedSource = Nepodarilo sa spracovať nerozpoznaný zdroj %1$S
-# LOCALIZATION NOTE (reportPostRedirect):
-# %1$S is the specified report URI before redirect
-reportPostRedirect = Odoslanie správy o porušení na adresu %1$S zlyhalo, pretože sa objavilo presmerovanie
-# LOCALIZATION NOTE (allowDirectiveIsDeprecated):
-# Don't translate "allow" and "default-src" as they are keywords and part of
-# the CSP protocol syntax.
-allowDirectiveIsDeprecated = Direktíva allow je zavrhnutá, použite radšej podobnú direktívu default-src
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
 inlineScriptBlocked = Pokus o spustenie vložených skriptov bol zablokovaný
@@ -70,39 +55,9 @@ hostNameMightBeKeyword = %1$S je interpretované ako názov servera, nie ako kľ
 notSupportingDirective = Nepodporovaná direktíva '%1$S'. Direktíva a jej hodnoty budú ignorované.
 
 # CSP Errors:
-policyURINotAlone = Direktíva policy-uri môže byť uvedená len samotná
-noParentRequest = Direktíva policy-uri nemôže byť získaná bez žiadosti rodiča a CSP.
-# LOCALIZATION NOTE (policyURIParseError):
-# %1$S is the URI that could not be parsed
-policyURIParseError = nebolo možné spracovať adresu: %1$S
-# LOCALIZATION NOTE (nonMatchingHost):
-# %1$S is the URI host that does not match
-nonMatchingHost = nebolo možné získať adresu 'policy uri' z odlišného servera: %1$S
-# LOCALIZATION NOTE (nonMatchingPort):
-# %1$S is the URI port that does not match
-nonMatchingPort = nebolo možné získať adresu 'policy uri' z odlišného portu: %1$S
-# LOCALIZATION NOTE (nonMatchingScheme):
-# %1$S is the URI scheme that does not match
-nonMatchingScheme = nebolo možné získať adresu 'policy uri' z odlišnej schémy: %1$S
-# LOCALIZATION NOTE (errorFetchingPolicy):
-# %1$S is the error that caused fetching to fail
-errorFetchingPolicy = Chyba pri získavaní adresy policy-uri: %1$S
-cspSourceNotURI = Zadaný parameter nie je nsIURI
-argumentIsNotString = Zadaný parameter nie je reťazec
-selfDataNotProvided = Nie je možné použiť parameter 'self', ak tieto údaje neboli poskytnuté
-# LOCALIZATION NOTE (uriWithoutScheme):
-# %1$S is the URI without a scheme
-uriWithoutScheme = nebolo možné spracovať adresu bez schémy: %1$S
-selfKeywordNoSelfData = bolo použité kľúčové slovo 'self', ale tieto údaje neboli poskytnuté
 # LOCALIZATION NOTE (couldntParseInvalidSource):
 # %1$S is the source that could not be parsed
 couldntParseInvalidSource = Nebolo možné spracovať neplatný zdroj %1$S
-# LOCALIZATION NOTE (hostSourceWithoutData):
-# %1$S is the source
-hostSourceWithoutData = Nebolo možné vytvoriť zdroj %1$S (len na strane hostiteľa) bez údajov 'self'
-# LOCALIZATION NOTE (sourceWithoutData):
-# %1$S is the source
-sourceWithoutData = Nebolo možné vytvoriť zdroj %1$S bez údajov 'self'
 # LOCALIZATION NOTE (couldntParseInvalidHost):
 # %1$S is the host that's invalid
 couldntParseInvalidHost = Nebolo možné spracovať neplatný server %1$S
@@ -112,21 +67,6 @@ couldntParseScheme = Nebolo možné spracovať schému v %1$S
 # LOCALIZATION NOTE (couldntParsePort):
 # %1$S is the string source
 couldntParsePort = Nebolo možné spracovať port v %1$S
-# LOCALIZATION NOTE (notIntersectPort):
-# %1$S is one source we tried to intersect
-# %2$S is the other
-notIntersectPort = Nie je možné prelínať %1$S s %2$S kvôli problémom s portom.
-# LOCALIZATION NOTE (notIntersectScheme):
-# %1$S is one source we tried to intersect
-# %2$S is the other
-notIntersectScheme = Nie je možné prelínať %1$S s %2$S kvôli problémom so schémou.
-# LOCALIZATION NOTE (intersectingSourceWithUndefinedHost):
-# %1$S is the source
-intersectingSourceWithUndefinedHost = prelína sa zdroj s nedefinovaným serverom: %1$S
-# LOCALIZATION NOTE (intersectingSourcesWithUndefinedHosts):
-# %1$S is the first source
-# %2$S is the second source
-intersectingSourcesWithUndefinedHosts = prelínajú sa dva zdroje s nedefinovanými servermi: %1$S a %2$S
 # LOCALIZATION NOTE (duplicateDirective):
 # %1$S is the name of the duplicate directive
-duplicateDirective = Bola zistená duplikátna direktíva %1$S. Všetky inštancie mimo prvej budú ignorované.
+duplicateDirective = Bola zistená duplicitná direktíva %1$S. Všetky inštancie mimo prvej budú ignorované.
