updated latvian translation

--- a/lv/browser/chrome/browser/browser.properties
+++ b/lv/browser/chrome/browser/browser.properties
@@ -72,8 +72,9 @@ getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera mikrofons un logs)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofons un lietotne)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofons un ekrāns)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofons un logs)
+getUserMedia.sharingMenuUnknownHost = Nezināma lapa
 
-
+webapps.requestUninstall = Vai tiešām vēlaties atinstalēt "%1$S"?
 
 
 bookmarksMenuButton.tooltip=Parādīt visas grāmatzīmes (%S)
