--- a/lv/browser/chrome/browser/devtools/projecteditor.properties
+++ b/lv/browser/chrome/browser/devtools/projecteditor.properties
@@ -30,6 +30,8 @@ projecteditor.selectFileLabel=Izvēlieties failu
 projecteditor.deleteFilePromptMessage=Vai tiešām vēlaties dzēst šo failu?
 projecteditor.deleteFolderPromptMessage=ai tiešām vēlaties dzēst šo mapi?
 projecteditor.deletePromptTitle=Dzēst
+projecteditor.confirmUnsavedTitle=Nesaglabātas izmaiņas
+projecteditor.confirmUnsavedLabel=Dažas no izmaiņām nav saglabātas un izejot tiks pazaudētas. Vai tiešām vēlaties turpināt?
 
 # LOCALIZATION NOTE (projecteditor.openFolderLabel):
 # This string is displayed as the title on the file picker when opening a folder
