--- a/lv/browser/chrome/browser/devtools/scratchpad.properties
+++ b/lv/browser/chrome/browser/devtools/scratchpad.properties
@@ -78,4 +78,14 @@ scratchpad.label=Javascript teksta redaktors
 # window.
 scratchpad.tooltip=Javascript teksta redaktors
 
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Krāpniecības brīdinājums: Esiet piesardzīgi ielīmējot lietas, ko nesaprotat. Tas var ļaut uzbrucējiem iegūt jūsu privātos datus vai pārņemt kontroli pār datoru. Lūdzu ierakstiet '%S' zemāk, lai atļautu ielīmēšanu.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=atļaut ielīmēšanu
+
 
