--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Aplikacija
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Poslušanje na vratih %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Vključite razhroščevanje za %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Dotaknite se za vključitev oddaljenega razhroščevalnika
 
 # Helper apps
 helperapps.open=Odpri 
