--- a/sl/mobile/android/chrome/webapp.properties
+++ b/sl/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 posodobitev ni uspela;Posodobitve niso uspele (#1)
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Pridobivanje posodobitev (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo
 
-webappsDisabledInGuest=Nameščanje aplikacij v gostujočih sejah je onemogočeno
+webappsDisabled=Nameščanje aplikacij je onemogočeno
