--- a/sl/toolkit/chrome/mozapps/extensions/xpinstallConfirm.properties
+++ b/sl/toolkit/chrome/mozapps/extensions/xpinstallConfirm.properties
@@ -10,7 +10,7 @@ itemWarnIntroSingle=Zahtevali ste naslednjo namestitev:
 installButtonDisabledLabel=Namesti (%S)
 installButtonLabel=Namesti zdaj
 
-installComplete=Namestitev programske opreme je končana. Za uveljavitev sprememb, morate ponovno zagnati %S.
+installComplete=Namestitev programske opreme je končana. Za uveljavitev sprememb morate ponovno zagnati %S.
 installCompleteTitle=Namestitev končana
 
 error-203=Napaka pri namestitvi predmeta
