updated latvian translation

--- a/lv/browser/chrome/browser/devtools/toolbox.properties
+++ b/lv/browser/chrome/browser/devtools/toolbox.properties
@@ -40,3 +40,13 @@ browserConsoleCmd.commandkey=j
 pickButton.tooltip=Izvēlietees elementu lapā
 options.panelLabel=Izstrādātāju rīku iestatījumu panelis
 toolbox.label=Izstrādātāju rīki
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tumšā tēma
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Gaišā tēma
+
+options.label=Iestatījumi
