--- a/lv/browser/chrome/browser/devtools/webconsole.properties
+++ b/lv/browser/chrome/browser/devtools/webconsole.properties
@@ -35,6 +35,11 @@ MenuWebconsole.label=Tīmekļa konsole
 # LOCALIZATION NOTE (timestampFormat): %1$02S = hours (24-hour clock),
 # %2$02S = minutes, %3$02S = seconds, %4$03S = milliseconds.
 timestampFormat=%02S:%02S:%02S.%03S
+emptySlotLabel=#1 tukšu vietu;#1 tukša vieta;#1 tukšas vietas
+table.index=(indekss)
+table.iterationIndex=(iterācijas indekss)
+table.key=Atslēga
+table.value=Vērtības
 
 # LOCALIZATION NOTE (scratchpad.linkText):
 # The text used in the right hand side of the web console command line when
