[hi-IN] update from Pootle (mobile)

--- a/hi-IN/mobile/android/chrome/pippki.properties
+++ b/hi-IN/mobile/android/chrome/pippki.properties
@@ -35,6 +35,7 @@ certmgr.certdetail.cn=सामान्य नाम (CN)
 certmgr.certdetail.o=संगठन (O)
 certmgr.certdetail.ou=सांगठनिक ईकाई (OU)
 certmgr.certdetail.serialnumber=क्रम संख्या
+certmgr.certdetail.sha256fingerprint=SHA-256 फिंगरप्रिंट
 certmgr.certdetail.sha1fingerprint=SHA1 फिंगरप्रिंट
 certmgr.begins=इस पर चालू
 certmgr.expires=इसपर समाप्त
