--- a/te/mobile/android/chrome/aboutHome.properties
+++ b/te/mobile/android/chrome/aboutHome.properties
@@ -2,3 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+banner.firstrunHomepage.text=మీ ముంగిలి పుటకు స్వాగతం! మీరు కొత్త ట్యాబు తెరిచినప్పుడల్లా ఇక్కడకు రండి.
