[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/newTab.properties
+++ b/es-MX/browser/chrome/browser/newTab.properties
@@ -18,6 +18,7 @@ newtab.sponsored.explain=Te mostramos esta miniatura en nombre de un socio de Mo
 # an active link using string newtab.learn.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Cuando abres una nueva pestaña, podrás ver los mosaicos de los sitios que visitas con frecuencia, junto con los mosaicos que te pueden interesar. Algunos de estos mosaicos son patrocinados por socios de Mozilla. Siempre te indicaremos cuales mosaicos son patrocinados. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
