--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -41,7 +41,10 @@ slider         =       deslizador
 spinbutton     =       botón de incremento/decremento
 diagram        =       diagrama
 animation      =       animación
+equation       =       ecuación
 buttonmenu     =       menú de botones
+whitespace     =       espacio en blanco
+pagetablist    =       lista de pestañas
 canvas         =       canvas
 passwordtext   =       texto de contraseña
 radiomenuitem  =       elemento de menú de radio
@@ -54,6 +57,8 @@ paragraph      =       párrafo
 entry          =       entrada
 caption        =       leyenda
 heading        =       encabezado
+section        =       sección
+form           =       formulario
 comboboxlist   =       lista desplegable
 comboboxoption =       opción de caja desplegable
 imagemap       =       mapa de imágenes
@@ -187,7 +192,12 @@ menupopupAbbr      =       menú emergente
 documentAbbr       =       documento
 paneAbbr           =       panel
 dialogAbbr         =       diálogo
+separatorAbbr      =       separador
+toolbarAbbr        =       barra de herramientas
 tableAbbr          =       tbl
+columnheaderAbbr   =       encabezado de columna
+rowheaderAbbr      =       encabezado de fila
+columnAbbr         =       columna
 rowAbbr            =       fila
 cellAbbr           =       celda
 linkAbbr           =       lnk
@@ -221,8 +231,11 @@ treetableAbbr      =       tabla de árbol
 headerAbbr         =       encabezado
 footerAbbr         =       pie de página
 paragraphAbbr      =       párrafo
+sectionAbbr        =       sección
+formAbbr           =       formulario
 comboboxlistAbbr   =       lista desplegable
 imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       opción
 flatequationAbbr   =       ecuación plana
 gridcellAbbr       =       cuadrícula
 noteAbbr           =       nota
