--- a/es-MX/browser/chrome/browser/devtools/storage.properties
+++ b/es-MX/browser/chrome/browser/devtools/storage.properties
@@ -81,6 +81,7 @@ table.headers.localStorage.name=Clave
 table.headers.localStorage.value=Valor
 
 table.headers.sessionStorage.name=Clave
+table.headers.sessionStorage.value=Valor
 
 table.headers.indexedDB.name=Clave
 table.headers.indexedDB.db=Nombre de la base de datos
