[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -4,24 +4,31 @@
 
 history-panelmenu.label = تاریخچه
 # LOCALIZATION NOTE(history-panelmenu.tooltiptext2): %S is the keyboard shortcut
+history-panelmenu.tooltiptext2 = نمایش تاریخچه شما (%S)
 
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
+privatebrowsing-button.tooltiptext = باز کردن پنجره جدید مرورگر خصوصی(%S)
 
+save-page-button.label = ذخیره صفحه
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
+save-page-button.tooltiptext3 = ذخیره این صفحه %S
 
 find-button.label = پیدا کردن
 # LOCALIZATION NOTE(find-button.tooltiptext3): %S is the keyboard shortcut.
 
 open-file-button.label = باز کردن پرونده
 # LOCALIZATION NOTE (open-file-button.tooltiptext3): %S is the keyboard shortcut.
+open-file-button.tooltiptext3 = باز کردن یک فایل (%S)
 
 developer-button.label = توسعه‌دهنده
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
+developer-button.tooltiptext2 = باز کردن ابزارهای توسعه‌دهنده وب (%S)
 
 sidebar-button.label = نوارهای کناری
 
 add-ons-button.label = افزودنی‌ها
 # LOCALIZATION NOTE(add-ons-button.tooltiptext3): %S is the keyboard shortcut
+add-ons-button.tooltiptext3 = مدیریت افزونه‎ ها (%S)
 
 # LOCALIZATION NOTE(switch-to-metro-button2.tooltiptext): %S is the brand short name
 
@@ -63,4 +70,5 @@ feed-button.label = آبونه شدن
 # %2$S is the keyboard shortcut
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
+
 
