--- a/it/mobile/android/chrome/aboutHome.properties
+++ b/it/mobile/android/chrome/aboutHome.properties
@@ -2,4 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-banner.firstrunHomepage.text = Benvenuto nella pagina iniziale. Questa pagina verrà visualizzata ogni volta che si apre una nuova scheda.
+banner.firstrunHomepage.text = Benvenuto. Questa pagina iniziale verrà visualizzata ogni volta che si apre una nuova scheda.
