Bug 1043797: extended popup notifications to create a generic doorhanger for all security notifications incl. mixed content

--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Dit bericht niet tonen wanneer pop-ups worden ge
 popupWarningDontShowFromLocationbar=Geen informatiebalk tonen wanneer pop-ups worden geblokkeerd
 popupShowPopupPrefix=‘%S’ tonen
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S blokkeerd inhoud op deze pagina.
+badContentBlocked.notblocked.message=%S blokkeerd geen enkele inhoud op deze pagina.
+
 # missing plugin installer
 installPlugin.message = Wilt u de plug-in die nodig is om de media op deze pagina weer te geven installeren?
 installPlugin.button.label=%S installeren
@@ -532,14 +537,6 @@ getUserMedia.continueSharing.label = Delen voortzetten
 getUserMedia.continueSharing.accesskey = D
 getUserMedia.stopSharing.label = Delen stoppen
 getUserMedia.stopSharing.accesskey = s
-
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S heeft onveilige inhoud geblokkeerd.
-mixedContentBlocked.keepBlockingButton.label = Blijven blokkeren
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = Bescherming op deze pagina uitschakelen
-mixedContentBlocked.unblock.accesskey = u
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S lijkt langzaam… te… starten.
