--- a/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
+++ b/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
@@ -16,7 +16,7 @@ menupopup      =       メニューポップアップ
 document       =       ドキュメント
 pane           =       ペイン
 dialog         =       ダイアログ
-separator      =       セパレータ
+separator      =       区切り
 toolbar        =       ツールバー
 statusbar      =       ステータスバー
 table          =       表
@@ -38,7 +38,7 @@ checkbutton    =       チェックボタン
 radiobutton    =       ラジオボタン
 combobox       =       コンボボックス
 progressbar    =       進行状況バー
-slider         =       スライダー
+slider         =       スライダ
 spinbutton     =       回転ボタン
 diagram        =       ダイアグラム
 animation      =       アニメーション
@@ -97,11 +97,10 @@ listEnd        =       最後の項目
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       #1 項目
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S (%2$S / %3$S)
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S / %2$S
 
 # Landmark announcements
 banner         =       バナー領域
@@ -111,17 +110,14 @@ main           =       メインコンテンツ
 navigation     =       ナビゲーション
 search         =       検索ツール
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %1$S (%2$S、%3$S)
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = #1 列
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = #1 列
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = #1 行
+tblRowInfo = #1 行
 
 # table or grid cell information
 columnInfo = 列 %S
@@ -194,18 +190,85 @@ quicknav_Checkbox    = チェックボックス
 
 ## (^m^) Bug 876475 参照
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %1$S (%2$S, %3$S)
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+menubarAbbr        = メニューバー
+scrollbarAbbr      = スクロールバー
+gripAbbr           = グリップ
+alertAbbr          = 警告
+menupopupAbbr      = メニューポップアップ
+documentAbbr       = ドキュメント
+paneAbbr           = ペイン
+dialogAbbr         = ダイアログ
+separatorAbbr      = 区切り
+toolbarAbbr        = ツールバー
+statusbarAbbr      = ステータスバー
+tableAbbr          = 表
+columnheaderAbbr   = 列ヘッダ
+rowheaderAbbr      = 行ヘッダ
+columnAbbr         = 列
+rowAbbr            = 行
+cellAbbr           = セル
+linkAbbr           = リンク
+listAbbr           = リスト
+listitemAbbr       = リスト項目
+outlineAbbr        = アウトライン
+outlineitemAbbr    = アウトライン項目
+pagetabAbbr        = タブ
+propertypageAbbr   = プロパティページ
+graphicAbbr        = 画像
+pushbuttonAbbr     = ボタン
+checkbuttonAbbr    = チェックボタン
+radiobuttonAbbr    = ラジオボタン
+comboboxAbbr       = コンボボックス
+progressbarAbbr    = 進行状況バー
+sliderAbbr         = スライダ
+spinbuttonAbbr     = 回転ボタン
+diagramAbbr        = ダイアグラム
+animationAbbr      = アニメーション
+equationAbbr       = 方程式
+buttonmenuAbbr     = ボタンメニュー
+whitespaceAbbr     = 空白文字
+pagetablistAbbr    = タブリスト
+canvasAbbr         = キャンバス
+checkmenuitemAbbr  = チェックメニュー項目
+labelAbbr          = ラベル
+passwordtextAbbr   = パスワードテキスト
+radiomenuitemAbbr  = ラジオメニュー項目
+textcontainerAbbr  = テキストコンテナ
+togglebuttonAbbr   = 切り替えボタン
+treetableAbbr      = 折り畳みリスト
+headerAbbr         = ヘッダ
+footerAbbr         = フッタ
+paragraphAbbr      = 段落
+entryAbbr          = エントリ
+captionAbbr        = キャプション
+headingAbbr        = 見出し
+sectionAbbr        = セクション
+formAbbr           = フォーム
+comboboxlistAbbr   = コンボボックスリスト
+comboboxoptionAbbr = コンボボックス項目
+imagemapAbbr       = イメージマップ
+listboxoptionAbbr  = リストボックス項目
+listboxAbbr        = リストボックス
+flatequationAbbr   = テキスト形式の方程式
+gridcellAbbr       = グリッドセル
+noteAbbr           = 注記
+figureAbbr         = 図表
+definitionlistAbbr = 定義リスト
+termAbbr           = 用語
+definitionAbbr     = 定義
+textareaAbbr       = テキストエリア
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r
-cellInfoAbbr = c%1$Sr%2$S
+tblRowInfoAbbr = #1r
+cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
