--- a/ja-JP-mac/toolkit/chrome/global/aboutSupport.properties
+++ b/ja-JP-mac/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound	= ClearType パラメータが見つかりません
 adapterDescription	= アダプタ名
 adapterVendorID		= ベンダ ID
 adapterDeviceID		= デバイス ID
+adapterSubsysID		= サブシステム ID
 adapterDrivers		= アダプタドライバ
 adapterRAM		= アダプタ RAM
 driverVersion		= ドライバのバージョン
@@ -71,6 +72,7 @@ driverDate		= ドライバの日付
 adapterDescription2	= アダプタ名 (GPU #2) 
 adapterVendorID2	= ベンダ ID (GPU #2) 
 adapterDeviceID2	= デバイス ID (GPU #2)
+adapterSubsysID2	= サブシステム ID (GPU #2)
 adapterDrivers2		= アダプタドライバ (GPU #2)
 adapterRAM2		= アダプタ RAM (GPU #2)
 driverVersion2		= ドライバのバージョン (GPU #2)
