--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -509,8 +509,16 @@ getUserMedia.shareMicrophone.message = Wilt u uw microfoon delen met %S?
 getUserMedia.shareScreen.message = Wilt u uw scherm delen met %S?
 getUserMedia.shareCameraAndMicrophone.message = Wilt u uw camera en microfoon delen met %S?
 getUserMedia.shareScreenAndMicrophone.message = Wilt u uw microfoon en scherm delen met %S?
+getUserMedia.selectWindow.label=Te delen venster:
+getUserMedia.selectWindow.accesskey=v
+getUserMedia.selectScreen.label=Te delen scherm:
+getUserMedia.selectScreen.accesskey=s
+getUserMedia.selectApplication.label=Te delen toepassing:
+getUserMedia.selectApplication.accesskey=t
 getUserMedia.noVideo.label = Geen video
-getUserMedia.noWindowOrScreen.label = Geen venster of scherm
+getUserMedia.noApplication.label = Geen toepassing
+getUserMedia.noScreen.label = Geen scherm
+getUserMedia.noWindow.label = Geen venster
 getUserMedia.noAudio.label = Geen audio
 getUserMedia.shareEntireScreen.label = Gehele scherm
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
@@ -520,6 +528,7 @@ getUserMedia.shareEntireScreen.label = Gehele scherm
 getUserMedia.shareSelectedDevices.label = Geselecteerde apparaat delen;Geselecteerde apparaten delen
 getUserMedia.shareSelectedDevices.accesskey = G
 getUserMedia.shareScreen.label = Scherm delen
+getUserMedia.shareApplication.label = Geselecteerde toepassing delen
 getUserMedia.shareWindow.label = Geselecteerde venster delen
 getUserMedia.shareSelectedItems.label = Geselecteerde items delen
 getUserMedia.always.label = Altijd delen
@@ -531,12 +540,42 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = U deelt momenteel uw camera met deze pagina.
 getUserMedia.sharingMicrophone.message2 = U deelt momenteel uw microfoon met deze pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = U deelt momenteel uw camera en microfoon met deze pagina.
+getUserMedia.sharingApplication.message = U deelt momenteel een toepassing met deze pagina.
 getUserMedia.sharingScreen.message = U deelt momenteel uw scherm met deze pagina.
 getUserMedia.sharingWindow.message = U deelt momenteel een venster met deze pagina.
 getUserMedia.continueSharing.label = Delen voortzetten
 getUserMedia.continueSharing.accesskey = D
 getUserMedia.stopSharing.label = Delen stoppen
 getUserMedia.stopSharing.accesskey = s
+
+getUserMedia.sharingMenu.label = Tabbladen deelapparaten
+getUserMedia.sharingMenu.accesskey = d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (camera)
+getUserMedia.sharingMenuMicrophone = %S (microfoon)
+getUserMedia.sharingMenuApplication = %S (toepassing)
+getUserMedia.sharingMenuScreen = %S (scherm)
+getUserMedia.sharingMenuWindow = %S (venster)
+getUserMedia.sharingMenuCameraMicrophone = %S (camera en microfoon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microfoon en toepassing)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microfoon en scherm)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microfoon en venster)
+getUserMedia.sharingMenuMicrophoneApplication = %S (microfoon en toepassing)
+getUserMedia.sharingMenuMicrophoneScreen = %S (microfoon en scherm)
+getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Unknown origin
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S lijkt langzaam… te… starten.
