--- a/nl/browser/chrome/browser/webrtcIndicator.properties
+++ b/nl/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Deelindicator
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Uw camera en microfoon worden gedeeld. Klik om delen te beheren.
 webrtcIndicator.sharingCamera.tooltip              = Uw camera wordt gedeeld. Klik om delen te beheren.
 webrtcIndicator.sharingMicrophone.tooltip          = Uw microfoon wordt gedeeld. Klik om delen te beheren.
+webrtcIndicator.sharingApplication.tooltip = Een toepassing wordt gedeeld. Klik om delen te beheren.
 webrtcIndicator.sharingScreen.tooltip = Uw scherm wordt gedeeld. Klik om delen te beheren.
 webrtcIndicator.sharingWindow.tooltip = Een venster wordt gedeeld. Klik om delen te beheren.
 
@@ -21,17 +22,19 @@ webrtcIndicator.sharingWindow.tooltip = Een venster wordt gedeeld. Klik om delen
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.sharingCameraWith.menuitem = Camera delen met "%S"
-webrtcIndicator.sharingMicrophoneWith.menuitem = Microfoon delen met "%S"
-webrtcIndicator.sharingScreenWith.menuitem = Scherm delen met "%S"
-webrtcIndicator.sharingWindowWith.menuitem = Een venster delen met "%S"
+webrtcIndicator.sharingCameraWith.menuitem = Camera delen met “%S”
+webrtcIndicator.sharingMicrophoneWith.menuitem = Microfoon delen met “%S”
+webrtcIndicator.sharingApplicationWith.menuitem = Toepassing delen met “%S”
+webrtcIndicator.sharingScreenWith.menuitem = Scherm delen met “%S”
+webrtcIndicator.sharingWindowWith.menuitem = Een venster delen met “%S”
 webrtcIndicator.controlSharing.menuitem = Delen beheren
 # LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
 # Semicolon-separated list of plural forms.
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Camera delen met #1 tabblad;Camera delen met #1 tabbladen
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Microfoon delen met #1 tabblad;Microfoon delen met #1 tabbladen
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Toepassing delen met #1 tabblad;Toepassing delen met #1 tabbladen
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Scherm delen met #1 tabblad;Scherm delen met #1 tabbladen
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Een venster delen met #1 tabblad;Een venster delen met #1 tabbladen
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.controlSharingOn.menuitem = Delen op "%S" beheren
+webrtcIndicator.controlSharingOn.menuitem = Delen op “%S” beheren
