Bug 1023193: make a customizableWidget out of the Loop toolbar button.

--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -101,3 +101,6 @@ quit-button.tooltiptext.mac = %1$S afsluiten (%2$S)
 
 panic-button.label = Vergeet
 panic-button.tooltiptext = Wat geschiedenis vergeten
+
+loop-call-button.label = Iemand uitnodigen voor een gesprek
+loop-call-button.tooltiptext = Iemand uitnodigen voor een gesprek
