Changes in nsserrors

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -126,3 +126,7 @@ feedback_back_button=Atrás
 feedback_window_will_close_in2=Esta ventana se cerrará en {{countdown}} segundo;Esta ventana se cerrará en {{countdown}} segundos
 feedback_rejoin_button=Volver a unirse
 feedback_report_user_button=Reportar usuario
+
+## number in the string, but if you need it for your language please use {{num}}.
+rooms_list_current_conversations=Conversación actual;Conversaciones actuales
+rooms_list_no_current_conversations=No hay conversaciones en este momento
