--- a/es-CL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-CL/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL ha recivido datos inválidos de la exte
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Característica de SSL no soportada por conexiones SSL 2.0
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Característica SSL no soportada por servidores.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Característica SSL no soportada por clientes
+SSL_ERROR_INVALID_VERSION_RANGE=El rango de versión de SSL no es válido.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=El par SSL seleccionado es un conjunto de cifrado no permitido para la versión del protocolo seleccionada.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL recibió un mensaje handshake de verificación de respuesta de saludo mal formulado.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL recibió un mensaje handshake de verificación de saludo inesperado.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Funcionalidad de SSL no soportada por la versión del protocolo.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL recibió un mensaje handshake de estado de certificado inesperado.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=El algoritmo de hash usado por el par TLS no está soportado.
+SSL_ERROR_DIGEST_FAILURE=La función digest falló.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=El algoritmo de firma especificado en un elemento firmado digitalmente es incorrecto.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=La extensión del protocolo de la siguiente negociación fue activado, pero la llamada fue cerrada antes de que fuera necesario.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=El servidor no soporta los protocolos que el cliente publicita en la extensión ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=El servidor rechazo el handshake debido a que el cliente bajó a una versión de TLS menor a la soportada por el servidor.
 SEC_ERROR_IO=Ha ocurrido un error de E/S durante la autorización de seguridad.
 SEC_ERROR_LIBRARY_FAILURE=fallo de la biblioteca de seguridad.
 SEC_ERROR_BAD_DATA=biblioteca de seguridad: se han recibido datos incorrectos.
