Per Bug 1064604 and iacchi over IRC revert chatzilla.properties to a version suitable for seamonkey 2.30 and 2.31

--- a/it/extensions/irc/chrome/chatzilla.properties
+++ b/it/extensions/irc/chrome/chatzilla.properties
@@ -327,7 +327,7 @@ cmd.log.help = Attiva o disattiva il log per il canale corrente. Il log viene at
 cmd.rlist.params = <regexp>
 cmd.rlist.help = Elenca nome del canale, numero di utenti, e informazioni sugli argomenti nel server/rete a cui si è collegati, filtrando il tutto tramite un'espressione regolare.
 cmd.reload-ui.help = Ricarica il file XUL di ChatZilla. Ad utilizzo degli sviluppatori.
-cmd.map.help = Simile a /links, ma fornisce una "Mappa di rete" grafica della rete IRC. Utilizzato principalmente ai fini dell'indirizzamento.
+cmd.map.help = Simile a /links, ma fornisce una "Mappa di rete" grafica della rete IRC. Utilizzato principalmente ai fini dell'indirizzamento.\u0020
 cmd.match-users.params = <mask>
 cmd.match-users.help = Mostra un elenco di tutti gli utenti il cui hostmask corrisponde a <mask>.
 cmd.me.params = <action>
@@ -674,7 +674,7 @@ msg.networks.heada = Le reti disponibili sono [
 msg.networks.headb = ].
 msg.messages.cleared = Vista messaggi svuotata.
 msg.match.unchecked = (%S utenti non sono stati controllati)
-msg.matching.nicks = I seguenti utenti corrispondono al criterio inserito: %S. %S
+msg.matching.nicks = I seguenti utenti corrispondono al criterio inserito: %S. %S\u0020
 msg.no.matching.nicks = Non sono stati trovati utenti in base ai criteri inseriti. %S
 msg.commands.header = Inserire il comando /help <nome-comando> per maggiori informazioni su un comando specifico.
 msg.matching.commands = I comandi attualmente riconosciuti che contengono ``%S'' sono [%S].\nInserire /help <command-name> per informazioni su uno specifico comando.
@@ -1073,13 +1073,11 @@ pref.autoRejoin.help = Se è attivato, ChatZilla tenterà (una sola volta) di ri
 pref.away.label = Stato assente
 pref.away.help = 
 pref.awayIdleTime.label = Timeout auto assenza
-pref.awayIdleTime.help = Dopo quanti minuti di inattività ChatZilla deve considerare lo stato come "assente". Funziona solo con le versione più recenti di &brandShortName;. Impostare a 0 per disattivarlo.
+pref.awayIdleTime.help = Dopo quanti minuti di inattività ChatZilla deve considerare lo stato come "assente". Funziona solo con le versione più recenti di &brandShortName;. Impostare a 0 per disattivarlo.\u0020
 pref.awayIdleMsg.label = Messaggio di auto assenza
 pref.awayIdleMsg.help = Il messaggio che ChatZilla deve utilizzare quando si è assenti.
 pref.awayNick.label = Soprannome (da assente)
 pref.awayNick.help = Questo soprannome sarà usata automaticamente quando ci si identifica come assenti, se è differente da 'Soprannome'. Si può lasciare questo campo bianco per non cambiare soprannome quando si è assenti.
-pref.bugKeyword.label = Parole chiave per bug
-pref.bugKeyword.help = È possibile definire parole chiave traccianti multiple come espressione regolare separandole con  "|" per esempio bug|problema|caso|ticket
 pref.bugURL.label = URL di Bugzilla
 pref.bugURL.help = L'URL usato per i collegamenti ai bug, con "%s" sostituito dal numero di bug. Il testo "bug " seguito da un numero diventerà un collegamento che usa questo URL.
 pref.bugURL.comment.label = URL per i commenti Bugzilla
