--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -521,6 +521,12 @@ getUserMedia.noScreen.label = Geen scherm
 getUserMedia.noWindow.label = Geen venster
 getUserMedia.noAudio.label = Geen audio
 getUserMedia.shareEntireScreen.label = Gehele scherm
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 venster);#1 (#2 vensters)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
